2007-01-06  Richard Dale  <rdale@foton.es>

	* Moved operator methods out of Qt.cs, and made them operator
	  methods in the classes of their arguments. In Qt.cs they
	  had to be translated to use names like op_mult() or op_add()
	  because C# only allows operator methods to be defined in the
	  class of one of their arguments. Now they are proper operator
	  methods which looks better.

2007-01-05  Richard Dale  <rdale@foton.es>

	* Updated the project TODO list
	* Added a a Qyoto Debug class for turning on debugging options
	  Example usage:

		Debug.SetDebug(QtDebugChannel.QTDB_VIRTUAL);

	  This will show the virtual method callbacks from the Smoke lib
	* Removed core/QGlobalSpace.cs as it isn't needed because the methods in 
	  it are in Qt.cs
	* The 'operator<<' and 'operator>>' methods are no longer renamed 
	  'op_write' and 'op_read', but 'Write' and 'Read' instead.
	* Started to implement QObject.FindChild() and QObject.FindChildren(),
	  but the code needs to be translated from QtRuby.
	* Removed unwanted blank lines from the generated code.

2007-01-04  Richard Dale  <rdale@foton.es>

	* The SmokeMethod attribute constructor now takes three arguments,
	  for example:

		[SmokeMethod("eventFilter", "(QObject*, QEvent*)", "##")]
		public virtual bool EventFilter(QObject arg1, QEvent arg2) {
			return ProxyQObject().EventFilter(arg1,arg2);
		}

	* There are four properties to access the values of a SmokeMethod.
	  For example:

		SmokeMethod.Name => "eventFilter"
		SmokeMethod.ArgsSignature => "(QObject*, QEvent*)"
		SmokeMethod.MungedName => "eventFilter##"
		SmokeMethod.Signature => "eventFilter(QObject*, QEvent*)"

	* Virtual method callbacks are now working again
	* In SmokeInvocation.Invoke() destructors aren't called until a way of
	  coordinating C# GC with C++ Qt instance deletion has been implemented.
	* C# operator methods are always static, and so the SmokeMethod Attribute